# blockchain-OLD

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.disabled  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  THIRD_PARTY  THIRD_PARTY_LICENSE  appveyor.yml
src/: .clang-format  CMakeLists.txt  CPPLINT.cfg
src/BinaryInfo/: benchmark.rc  daemon.rc  miner.rc  paymentgate.rc  sync.rc  wallet.rc
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerData.h  BlockchainExplorerDataSerialization.cpp  BlockchainExplorerDataSerialization.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h  IBlockchainExplorer.h
src/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  BlockingQueue.cpp  BlockingQueue.h  ByteSpanInputStream.cpp  ByteSpanInputStream.hpp  CommandLine.cpp  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  FileMappedVector.h  FormatTools.cpp  FormatTools.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  IStreamSerializable.h  JsonValue.cpp  JsonValue.h  Math.cpp  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  (+18 more)
src/CommonCLI/: Centered.h  CommonCLI.cpp  CommonCLI.h
src/CryptoNoteCore/: Account.cpp  Account.h  AddBlockErrorCondition.cpp  AddBlockErrorCondition.h  AddBlockErrors.cpp  AddBlockErrors.h  AmountFormatter.cpp  AmountFormatter.hpp  BlockInfo.h  BlockValidationErrors.cpp  BlockValidationErrors.h  BlockchainCache.cpp  BlockchainCache.h  BlockchainMessages.cpp  BlockchainMessages.h  BlockchainReadBatch.cpp  BlockchainReadBatch.h  BlockchainStorage.cpp  BlockchainStorage.h  BlockchainUtils.cpp  BlockchainUtils.h  BlockchainWriteBatch.cpp  BlockchainWriteBatch.h  CachedBlock.cpp  CachedBlock.h  CachedTransaction.cpp  CachedTransaction.h  CheckDifficulty.cpp  CheckDifficulty.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreErrors.cpp  CoreErrors.h  CoreStatistics.h  CryptoNote.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  (+92 more)
src/CryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerCommon.h  CryptoNoteProtocolSuspiciousRequestsDetector.cpp  CryptoNoteProtocolSuspiciousRequestsDetector.h  ICryptoNoteProtocolObserver.h  ICryptoNoteProtocolQuery.h
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h  DaemonConfiguration.h
src/DaemonSync/: DeamonSync.cpp
src/HTTP/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
src/Logging/: CommonLogger.cpp  CommonLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h  Level.cpp  Level.h  LoggerGroup.cpp  LoggerGroup.h  LoggerManager.cpp  LoggerManager.h  LoggerMessage.cpp  LoggerMessage.h  LoggerRef.cpp  LoggerRef.h  StreamLogger.cpp  StreamLogger.h
src/Miner/: BlockchainMonitor.cpp  BlockchainMonitor.h  Miner.cpp  Miner.h  MinerEvent.h  MinerManager.cpp  MinerManager.h  MiningConfig.cpp  MiningConfig.h  main.cpp
src/MinerBenchmark/: BenchmarkResult.cpp  BenchmarkResult.h  BenchmarkSerialization.cpp  BenchmarkSerialization.h  MinerBenchmark.cpp
src/Mnemonics/: CRC32.h  Mnemonics.cpp  Mnemonics.h  WordList.h
src/NodeInProcess/: NodeInProcess.cpp  NodeInProcess.hpp
src/NodeRpcProxy/: NodeErrors.cpp  NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h
src/P2p/: ConnectionContext.h  IP2pNodeInternal.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  NetNodeCommon.h  NetNodeConfig.cpp  NetNodeConfig.h  P2pConnectionContextHistory.h  P2pConnectionProxy.cpp  P2pConnectionProxy.h  P2pContext.cpp  P2pContext.h  P2pContextOwner.cpp  P2pContextOwner.h  P2pInterfaces.cpp  P2pInterfaces.h  P2pNode.cpp  P2pNode.h  P2pNodeConfig.cpp  P2pNodeConfig.h  P2pPenality.h  P2pPenalty.h  P2pProtocolDefinitions.h  P2pProtocolTypes.h  PeerListManager.cpp  PeerListManager.h  PendingLiteBlock.h  UPNPErrorMessage.cpp  UPNPErrorMessage.h
src/Rpc/: CoreRpcServerCommandsDefinitions.h  CoreRpcServerErrorCodes.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  JsonRpc.cpp  JsonRpc.h  RpcRemoteConfiguration.h  RpcServer.cpp  RpcServer.h
src/Serialization/: ArraySerialization.hpp  BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  BinarySerializationTools.h  BlockchainExplorerDataSerialization.cpp  BlockchainExplorerDataSerialization.h  ChronoSerialization.h  ConsoleOutputSerializer.cpp  ConsoleOutputSerializer.hpp  EnumSerialization.hpp  FlagSerialization.hpp  ISerializer.h  IStream.h  JsonInputStreamSerializer.cpp  JsonInputStreamSerializer.h  JsonInputValueSerializer.cpp  JsonInputValueSerializer.h  JsonOutputStreamSerializer.cpp  JsonOutputStreamSerializer.h  KVBinaryCommon.h  KVBinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.h  KVBinaryOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.h  MemoryStream.cpp  MemoryStream.h  NullOutputSerializer.h  OptionalSerialization.hpp  SerializationOverloads.cpp  SerializationOverloads.h  SerializationTools.h  TypeTag.cpp  TypeTag.hpp  VariantSerialization.hpp  YamlInputSerializer.cpp  YamlInputSerializer.hpp  YamlOutputSerializer.cpp  YamlOutputSerializer.hpp
src/System/: Context.h  ContextGroup.cpp  ContextGroup.h  ContextGroupTimeout.cpp  ContextGroupTimeout.h  Event.cpp  Event.h  EventLock.cpp  EventLock.h  InterruptedException.cpp  InterruptedException.h  Ipv4Address.cpp  Ipv4Address.h  OperationTimeout.h  RemoteContext.h  RemoteEventLock.cpp  RemoteEventLock.h  TcpStream.cpp  TcpStream.h
src/Transfers/: BlockchainSynchronizer.cpp  (+17 more)
tests/: CMakeLists.txt
tools/: CMakeLists.txt  GenerateHashes.cpp  GenerateWallet.cpp
(+1550 files in other folders)
